Windows: changed output destination for remaining projects.

--- a/cmd/edgepaint/edgepaint.vcxproj
+++ b/cmd/edgepaint/edgepaint.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{B7A03994-C134-4FF7-98B4-97B5579EF13D}</ProjectGuid>
     <RootNamespace>edgepaint</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -41,12 +42,12 @@
     <_ProjectFileVersion>14.0.25123.0</_ProjectFileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>Debug\</OutDir>
+    <OutDir>$(SolutionDir)Debug\Graphviz\bin\</OutDir>
     <IntDir>Debug\</IntDir>
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>Release\</OutDir>
+    <OutDir>$(SolutionDir)Graphviz\bin\</OutDir>
     <IntDir>Release\</IntDir>
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
@@ -64,7 +65,6 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>lab_gamut.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>c:/graphviz-ms/bin/$(ProjectName).exe</OutputFile>
       <AdditionalLibraryDirectories>C:\graphviz-ms\bin;$(SolutionDir)windows\dependencies\GTK2\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
@@ -85,7 +85,6 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>lab_gamut.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>c:/graphviz-ms/bin/$(ProjectName).exe</OutputFile>
       <AdditionalLibraryDirectories>C:\graphviz-ms\bin;$(SolutionDir)windows\dependencies\GTK2\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
