--- a/cmd/smyrna/smyrna.vcxproj
+++ b/cmd/smyrna/smyrna.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{13145C00-3694-4342-AFBE-4FAA7E1086BC}</ProjectGuid>
     <RootNamespace>smyrna</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -38,12 +39,12 @@
     <_ProjectFileVersion>14.0.25123.0</_ProjectFileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>Debug\</OutDir>
+    <OutDir>$(SolutionDir)Debug\Graphviz\bin\</OutDir>
     <IntDir>Debug\</IntDir>
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>Release\</OutDir>
+    <OutDir>$(SolutionDir)Graphviz\bin\</OutDir>
     <IntDir>Release\</IntDir>
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
@@ -63,7 +64,6 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>asprintf.lib;ast.lib;atk-1.0.lib;bz2.lib;cairo.lib;cdt.lib;cgraph.lib;charset.lib;croco-0.6.lib;expat.lib;expatw.lib;expr.lib;fontconfig.lib;freetype.lib;Gdi32.lib;gdk_pixbuf-2.0.lib;gdkglext-win32-1.0.lib;gdk-win32-2.0.lib;glade-2.0.lib;gladeui-1.lib;glcomp.lib;glib-2.0.lib;glu32.lib;gmodule-2.0.lib;gobject-2.0.lib;gsf-1.lib;gsf-win32-1.lib;gthread-2.0.lib;gtkglext-win32-1.0.lib;gtk-win32-2.0.lib;gts.lib;gvprlib.lib;iconv.lib;ingraphs.lib;intl.lib;jpeg.lib;libexpat.lib;libexpatw.lib;libgtkglext-win32-1.0.dll.a;ltdl.lib;mspng.lib;neatogen.lib;opengl32.lib;pango-1.0.lib;pangocairo-1.0.lib;pangoft2-1.0.lib;pangowin32-1.0.lib;popt.lib;rsvg-2.lib;sfio.lib;shlwapi.lib;tiff.lib;topfish.lib;User32.lib;vmalloc.lib;xdot.lib;xml2.lib;zdll.lib;gvc.lib</AdditionalDependencies>
-      <OutputFile>c:/graphviz-ms/bin/$(ProjectName).exe</OutputFile>
       <AdditionalLibraryDirectories>C:\glade_setup\lib;C:\graphviz-ms\bin;$(SolutionDir)windows\dependencies\GTK2\lib;C:\GnuWin32\lib;C:\Projects\graphviz2\lib\zlib-1.2.3\lib;C:\Projects\cairo_build\lib;C:\Projects\ATT\GTK\GTKTest2\lib;$(SolutionDir)windows\dependencies\GTK2GLExt\1.0\lib;$(SolutionDir)windows\dependencies\GTK2\2.0\bin;$(SolutionDir)windows\dependencies\GTK2\2.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
@@ -83,7 +83,6 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>asprintf.lib;ast.lib;atk-1.0.lib;bz2.lib;cairo.lib;cdt.lib;cgraph.lib;charset.lib;croco-0.6.lib;expat.lib;expatw.lib;expr.lib;fontconfig.lib;freetype.lib;Gdi32.lib;gdk_pixbuf-2.0.lib;gdkglext-win32-1.0.lib;gdk-win32-2.0.lib;glade-2.0.lib;gladeui-1.lib;glcomp.lib;glib-2.0.lib;glu32.lib;gmodule-2.0.lib;gobject-2.0.lib;gsf-1.lib;gsf-win32-1.lib;gthread-2.0.lib;gtkglext-win32-1.0.lib;gtk-win32-2.0.lib;gts.lib;gvprlib.lib;iconv.lib;ingraphs.lib;intl.lib;jpeg.lib;libexpat.lib;libexpatw.lib;libgtkglext-win32-1.0.dll.a;ltdl.lib;mspng.lib;neatogen.lib;opengl32.lib;pango-1.0.lib;pangocairo-1.0.lib;pangoft2-1.0.lib;pangowin32-1.0.lib;popt.lib;rsvg-2.lib;sfio.lib;shlwapi.lib;tiff.lib;topfish.lib;User32.lib;vmalloc.lib;xdot.lib;xml2.lib;zdll.lib;gvc.lib</AdditionalDependencies>
-      <OutputFile>c:/graphviz-ms/bin/$(ProjectName).exe</OutputFile>
       <AdditionalLibraryDirectories>C:\glade_setup\lib;C:\graphviz-ms\bin;$(SolutionDir)windows\dependencies\GTK2\lib;C:\GnuWin32\lib;C:\Projects\graphviz2\lib\zlib-1.2.3\lib;C:\Projects\cairo_build\lib;C:\Projects\ATT\GTK\GTKTest2\lib;$(SolutionDir)windows\dependencies\GTK2GLExt\1.0\lib;$(SolutionDir)windows\dependencies\GTK2\2.0\bin;$(SolutionDir)windows\dependencies\GTK2\2.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
