--- a/cmd/tools/ccomps.vcxproj
+++ b/cmd/tools/ccomps.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{1B030847-602F-4095-8FA2-E8B5CF793F60}</ProjectGuid>
     <RootNamespace>ccomps</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -38,12 +39,12 @@
     <_ProjectFileVersion>14.0.25123.0</_ProjectFileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>Debug\</OutDir>
+    <OutDir>$(SolutionDir)Debug\Graphviz\bin\</OutDir>
     <IntDir>Debug\</IntDir>
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>Release\</OutDir>
+    <OutDir>$(SolutionDir)Graphviz\bin\</OutDir>
     <IntDir>Release\</IntDir>
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
@@ -61,7 +62,6 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>libpng.lib;gtk-win32-2.0.lib;asprintf.lib;atk-1.0.lib;bz2.lib;cairo.lib;charset.lib;croco-0.6.lib;expat.lib;expatw.lib;glade-2.0.lib;fontconfig.lib;freetype.lib;gdk_pixbuf-2.0.lib;gdkglext-win32-1.0.lib;gdk-win32-2.0.lib;glib-2.0.lib;pathplan.lib;gmodule-2.0.lib;gobject-2.0.lib;gsf-1.lib;gsf-win32-1.lib;gthread-2.0.lib;gtkglext-win32-1.0.lib;iconv.lib;intl.lib;jpeg.lib;libexpat.lib;libexpatw.lib;pango-1.0.lib;pangocairo-1.0.lib;pangoft2-1.0.lib;pangowin32-1.0.lib;popt.lib;rsvg-2.lib;tiff.lib;xml2.lib;libgdkglext-win32-1.0.dll.a;libgtkglext-win32-1.0.dll.a;glu32.lib;opengl32.lib;ltdl.lib;zdll.lib;cdt.lib;gvc.lib;circogen.lib;neatogen.lib;fdpgen.lib;patchwork.lib;sparse.lib;twopigen.lib;cgraph.lib;ingraphs.lib</AdditionalDependencies>
-      <OutputFile>c:/graphviz-ms/bin/$(ProjectName).exe</OutputFile>
       <AdditionalLibraryDirectories>C:\graphviz-ms\bin;$(SolutionDir)windows\dependencies\GTK2\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
@@ -81,7 +81,6 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>libpng.lib;gtk-win32-2.0.lib;asprintf.lib;atk-1.0.lib;bz2.lib;cairo.lib;charset.lib;croco-0.6.lib;expat.lib;expatw.lib;glade-2.0.lib;fontconfig.lib;freetype.lib;gdk_pixbuf-2.0.lib;gdkglext-win32-1.0.lib;gdk-win32-2.0.lib;glib-2.0.lib;pathplan.lib;gmodule-2.0.lib;gobject-2.0.lib;gsf-1.lib;gsf-win32-1.lib;gthread-2.0.lib;gtkglext-win32-1.0.lib;iconv.lib;intl.lib;jpeg.lib;libexpat.lib;libexpatw.lib;pango-1.0.lib;pangocairo-1.0.lib;pangoft2-1.0.lib;pangowin32-1.0.lib;popt.lib;rsvg-2.lib;tiff.lib;xml2.lib;libgdkglext-win32-1.0.dll.a;libgtkglext-win32-1.0.dll.a;glu32.lib;opengl32.lib;ltdl.lib;zdll.lib;cdt.lib;gvc.lib;circogen.lib;neatogen.lib;fdpgen.lib;patchwork.lib;sparse.lib;twopigen.lib;cgraph.lib;ingraphs.lib</AdditionalDependencies>
-      <OutputFile>c:/graphviz-ms/bin/$(ProjectName).exe</OutputFile>
       <AdditionalLibraryDirectories>C:\graphviz-ms\bin;$(SolutionDir)windows\dependencies\GTK2\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
