--- a/cmd/lefty/lefty.vcxproj
+++ b/cmd/lefty/lefty.vcxproj
@@ -69,6 +69,9 @@
       <DataExecutionPrevention />
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
+    <PreBuildEvent>
+      <Command>%BISON% -dy dot2l\dotparse.y -o dot2l\dotparse.c</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -89,6 +92,9 @@
       <DataExecutionPrevention />
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
+    <PreBuildEvent>
+      <Command>%BISON% -dy dot2l\dotparse.y -o dot2l\dotparse.c</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ws\mswin32\gcommon.h" />
