--- a/plugin/gdiplus/gvplugin_gdiplus.vcxproj
+++ b/plugin/gdiplus/gvplugin_gdiplus.vcxproj
@@ -64,8 +64,8 @@
       <CallingConvention>Cdecl</CallingConvention>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>libpng.lib;gtk-win32-2.0.lib;asprintf.lib;atk-1.0.lib;bz2.lib;cairo.lib;charset.lib;croco-0.6.lib;expat.lib;expatw.lib;glade-2.0.lib;fontconfig.lib;freetype.lib;gdk_pixbuf-2.0.lib;gdkglext-win32-1.0.lib;gdk-win32-2.0.lib;glib-2.0.lib;pathplan.lib;gmodule-2.0.lib;gobject-2.0.lib;gsf-1.lib;gsf-win32-1.lib;gthread-2.0.lib;gtkglext-win32-1.0.lib;iconv.lib;intl.lib;jpeg.lib;libexpat.lib;libexpatw.lib;pango-1.0.lib;pangocairo-1.0.lib;pangoft2-1.0.lib;pangowin32-1.0.lib;popt.lib;rsvg-2.lib;tiff.lib;xml2.lib;libgdkglext-win32-1.0.dll.a;libgtkglext-win32-1.0.dll.a;glu32.lib;opengl32.lib;ltdl.lib;zdll.lib;cdt.lib;graph.lib;gvc.lib;circogen.lib;neatogen.lib;fdpgen.lib;patchwork.lib;sparse.lib;twopigen.lib;gd.lib;gts.lib;Gdiplus.lib;Ole32.lib;user32.lib;gdi32.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(SolutionDir)windows\dependencies\GTK2\lib;C:\graphviz-ms\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libpng12.lib;gtk-win32-2.0.lib;asprintf.lib;atk-1.0.lib;bz2.lib;libcairo-2.lib;charset.lib;croco-0.6.lib;glade-2.0.lib;fontconfig.lib;freetype.lib;gdk_pixbuf-2.0.lib;gdkglext-win32-1.0.lib;gdk-win32-2.0.lib;glib-2.0.lib;pathplan.lib;gmodule-2.0.lib;gobject-2.0.lib;gsf-1.lib;gsf-win32-1.lib;gthread-2.0.lib;gtkglext-win32-1.0.lib;iconv.lib;intl.lib;jpeg.lib;libexpat.lib;libexpatw.lib;pango-1.0.lib;pangocairo-1.0.lib;pangoft2-1.0.lib;pangowin32-1.0.lib;popt.lib;rsvg-2.lib;tiff.lib;xml2.lib;libgdkglext-win32-1.0.dll.a;libgtkglext-win32-1.0.dll.a;glu32.lib;opengl32.lib;ltdl.lib;z.lib;cdt.lib;graph.lib;gvc.lib;circogen.lib;neatogen.lib;fdpgen.lib;patchwork.lib;sparse.lib;twopigen.lib;gd.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)Debug\Graphviz\bin\;$(SolutionDir)windows\dependencies\GTK2\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <ModuleDefinitionFile>gvplugin_gdiplus.def</ModuleDefinitionFile>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AssemblyDebug>true</AssemblyDebug>
@@ -85,8 +85,8 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>libpng.lib;gtk-win32-2.0.lib;asprintf.lib;atk-1.0.lib;bz2.lib;cairo.lib;charset.lib;croco-0.6.lib;expat.lib;expatw.lib;glade-2.0.lib;fontconfig.lib;freetype.lib;gdk_pixbuf-2.0.lib;gdkglext-win32-1.0.lib;gdk-win32-2.0.lib;glib-2.0.lib;pathplan.lib;gmodule-2.0.lib;gobject-2.0.lib;gsf-1.lib;gsf-win32-1.lib;gthread-2.0.lib;gtkglext-win32-1.0.lib;iconv.lib;intl.lib;jpeg.lib;libexpat.lib;libexpatw.lib;pango-1.0.lib;pangocairo-1.0.lib;pangoft2-1.0.lib;pangowin32-1.0.lib;popt.lib;rsvg-2.lib;tiff.lib;xml2.lib;libgdkglext-win32-1.0.dll.a;libgtkglext-win32-1.0.dll.a;glu32.lib;opengl32.lib;ltdl.lib;zdll.lib;cdt.lib;graph.lib;gvc.lib;circogen.lib;neatogen.lib;fdpgen.lib;patchwork.lib;sparse.lib;twopigen.lib;gd.lib;gts.lib;Ole32.lib;user32.lib;gdi32.lib;gdiplus.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\graphviz-ms\bin;$(SolutionDir)windows\dependencies\GTK2\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libpng12.lib;gtk-win32-2.0.lib;asprintf.lib;atk-1.0.lib;bz2.lib;libcairo-2.lib;charset.lib;croco-0.6.lib;glade-2.0.lib;fontconfig.lib;freetype.lib;gdk_pixbuf-2.0.lib;gdkglext-win32-1.0.lib;gdk-win32-2.0.lib;glib-2.0.lib;pathplan.lib;gmodule-2.0.lib;gobject-2.0.lib;gsf-1.lib;gsf-win32-1.lib;gthread-2.0.lib;gtkglext-win32-1.0.lib;iconv.lib;intl.lib;jpeg.lib;pango-1.0.lib;pangocairo-1.0.lib;pangoft2-1.0.lib;pangowin32-1.0.lib;popt.lib;rsvg-2.lib;tiff.lib;xml2.lib;libgdkglext-win32-1.0.dll.a;libgtkglext-win32-1.0.dll.a;glu32.lib;opengl32.lib;z.lib;cdt.lib;gvc.lib;circogen.lib;neatogen.lib;fdpgen.lib;patchwork.lib;sparse.lib;twopigen.lib;gd.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)Graphviz\bin\;$(SolutionDir)windows\dependencies\GTK2\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <ModuleDefinitionFile>gvplugin_gdiplus.def</ModuleDefinitionFile>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
