--- a/lib/gvc.vcxproj
+++ b/lib/gvc.vcxproj
@@ -72,7 +72,7 @@
       <ModuleDefinitionFile>gvc.def</ModuleDefinitionFile>
     </Link>
     <PreBuildEvent>
-      <Command>%BISON% -dy common\htmlparse.y -o common\htmlparse-intermediate.c
+      <Command>"%BISON%" -dy common\htmlparse.y -o common\htmlparse-intermediate.c
 "%SED%" "s/yy/html/g" &lt; common\htmlparse-intermediate.c &gt; common\htmlparse.c
 "%SED%" "s/yy/html/g" &lt; common\htmlparse-intermediate.h &gt; common\htmlparse.h
 del common\htmlparse-intermediate.c
@@ -102,7 +102,7 @@ del common\htmlparse-intermediate.h</Command>
       <ModuleDefinitionFile>gvc.def</ModuleDefinitionFile>
     </Link>
     <PreBuildEvent>
-      <Command>%BISON% -dy common\htmlparse.y -o common\htmlparse-intermediate.c
+      <Command>"%BISON%" -dy common\htmlparse.y -o common\htmlparse-intermediate.c
 "%SED%" "s/yy/html/g" &lt; common\htmlparse-intermediate.c &gt; common\htmlparse.c
 "%SED%" "s/yy/html/g" &lt; common\htmlparse-intermediate.h &gt; common\htmlparse.h
 del common\htmlparse-intermediate.c
