Added rxspencer win32 libraries as submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "windows/dependencies/ANN"]
 	path = windows/dependencies/ANN
 	url = https://github.com/ErwinJanssen/ANN-win32.git
+[submodule "windows/dependencies/rxspencer"]
+	path = windows/dependencies/rxspencer
+	url = https://github.com/ErwinJanssen/rxspencer-win32.git
