disable PHP7 support in fc25 until swig supports it

--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -168,6 +168,10 @@ BuildRequires: libwebp-devel
 %define _GO 1
 BuildRequires: golang >= 1.2 gcc-go swig >= 3.0.2
 %endif
+%if %fedora >= 25
+%define PHP 0
+# disable PHP7 in fc25 until such time as swig supports it
+%endif
 %endif
 
 # What a meal PHP makes of versioning !!!
