fix break to 'make dist'

--- a/contrib/diffimg/Makefile.am
+++ b/contrib/diffimg/Makefile.am
@@ -31,5 +31,5 @@ test: diffimg
 	if `./diffimg hello1.png hello2.png >test2.png`;then echo same;else echo different;fi
 
 CLEANFILES = *.png
-EXTRA_DIST = diffimg.vcproj diffimg.1 diffimg.1.pdf
+EXTRA_DIST = diffimg.vcxproj* diffimg.1 diffimg.1.pdf
 DISTCLEANFILES = diffimg.1.pdf
