--- a/plugin/core/Makefile.am
+++ b/plugin/core/Makefile.am
@@ -59,7 +59,7 @@ if WITH_DARWIN9
 libgvplugin_core_la_LDFLAGS += -Wl,-exported_symbol,_gvplugin_core_LTX_library
 endif
 
-EXTRA_DIST = ps.h plugincore.vcproj gvplugin_core.vcproj gvplugin_core.def
+EXTRA_DIST = ps.h plugincore.vcproj gvplugin_core.vcxproj* gvplugin_core.def
 
 DISTCLEANFILES = ps.h
 
