--exclude=w[Cindows/dependencies/*/*   not our code, and breaks ubuntus tar v7 as used by traviz

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@
 
 ACLOCAL_AMFLAGS = -I m4
 
-export TAR_OPTIONS = --owner=0 --group=0
+export TAR_OPTIONS = --owner=0 --group=0 --exclude=windows/dependencies/*/*
 
 txtdir = $(pkgdatadir)/doc
 htmldir = $(pkgdatadir)/doc/html
