Changed Bison, Flex and SED source.
These utilities were installed from sourceforge, but this website has been
unstable lately. Often builds failed because the site was unreachable. The
utilities are now included using a git submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "windows/dependencies/libgd"]
 	path = windows/dependencies/libgd
 	url = https://github.com/libgd/libgd.git
+[submodule "windows/dependencies/graphviz-build-utilities"]
+	path = windows/dependencies/graphviz-build-utilities
+	url = https://github.com/ErwinJanssen/graphviz-build-utilities.git
