-Wtrampolines -Wdouble-promotion  - cause errors on older (centos[56]) compilers

--- a/configure.ac
+++ b/configure.ac
@@ -322,7 +322,10 @@ then
   CFLAGS="${CFLAGS} -Wextra"
   
   # Enable specific warning flags not included by -Wall or -Wextra
-  CFLAGS="${CFLAGS} -Wdouble-promotion -Wmissing-include-dirs -Wswitch-default -Wtrampolines -Wfloat-equal -Wundef -Wshadow -Wpointer-arith -Wbad-function-cast -Wcast-qual -Wconversion -Wlogical-op -Wstrict-prototypes -Wmissing-prototypes -Wnested-externs"
+  CFLAGS="${CFLAGS} -Wmissing-include-dirs -Wswitch-default Wfloat-equal -Wundef -Wshadow -Wpointer-arith -Wbad-function-cast -Wcast-qual -Wconversion -Wlogical-op -Wstrict-prototypes -Wmissing-prototypes -Wnested-externs"
+
+# FIXME - The are not available of centos [6] - need smarted config:  -Wdouble-promotion -Wtrampolines 
+
 fi
 
 dnl -----------------------------------
